# Trackora

./: .env  .env.example  .gitignore  README.md  index.html  latest.json  out.json  out2.json  out3.json  out4.json  package-lock.json  package.json  purge_storage.js  query_out.txt  rebuild_error.txt  test_activity.js  test_screenshot.cjs  test_storage.js  vite.config.ts
.git_backup/: COMMIT_EDITMSG  FETCH_HEAD  config  index
admin-portal/: index.html  package-lock.json  tailwind.config.js
backend/: .env  .env.example  apply_rls.mjs  check_org.mjs  check_roles.mjs  check_verification_v2.mjs  dump_all_identity_to_file.mjs  fix_members_rls.sql  full_identity_dump.txt  master_recursion_fix.sql  migration_v2.sql  recursion_free_rls.sql  reports_seed.sql  schema_debug.json  supabase_rls_policies.sql  supabase_schema.sql  test_dashboard.ts  users_dump.json  users_dump.txt  verification_output.txt
dist-electron/: main.js  preload.mjs
electron/: api.ts  main.ts  preload.ts  tracker.ts
landing/: index.html  style.css
scripts/: generate_keys.js  generate_keys_v2.js  github_release.js  github_release_v1.2.7.js  github_release_v1.2.9.js  github_release_v1.3.0.js  process_v1.2.9_updater.js  process_v1.3.0_updater.js  release_helper.js  release_v1.1.0.js  (+9 more)
src-tauri/: Cargo.toml  build_and_sign.ps1  cargo_errors.txt  cargo_errors_utf8.txt  errors.txt  final_sign.js  finalize_release.js  finalize_release_v2.js  prepare_release.js  sign_msi.js  sign_v124.js  signing.key  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  lib.rs  tracker.rs  updater.rs
(+427 files in other folders)
