[package]
name = "digireps-tracker"
version = "1.0.7"
description = "DigiReps Time Tracker — Desktop App"
authors = ["DigiReps"]
edition = "2021"

[lib]
name = "tauri_scaffold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
screenshots = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["time"] }
ureq = { version = "2", features = ["native-tls"] }

